@@ -1,1 +1,19 @@
 # my-java-browser
+Simple java browswer.
+
+# Screenshot
+![screenshot](https://github.com/fariduca/my-java-browser/blob/main/img/screenshot.PNG)
+
+# Requirements:
+- [JavaFX library](https://openjfx.io/)
+- Java SDK
+- InteliJ IDEA
+
+The JavaFX library should be downloaded and added to the project dependencies.
+In addtion, make sure you add 
+>--module-path ${PATH_TO_FX} --add-modules javafx.controls,javafx.fxml,javafx.web --add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
+
+to the VM options of the project run configuration.
+
+# Author 
+Faridun M.
